Solve the problem of spark and flink doris connector compilation failure under jdk11,
Solve the problem of spark and flink doris connector compilation failure under jdk11,